k8s/base/deployment-celery-beat.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-beat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-beat
  template:
    metadata:
      labels:
        app: celery-beat
    spec:
      containers:
        - name: celery-beat
          image: 178761578367.dkr.ecr.ap-south-1.amazonaws.com/chartr-ondc-delhi-buses-buyer:staging
          imagePullPolicy: Always
          args: ["celery-beat"]
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "500Mi"
              cpu: "500m"
