k8s/base/deployment-celery-worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-worker
  template:
    metadata:
      labels:
        app: celery-worker
    spec:
      containers:
        - name: celery-worker
          image: 178761578367.dkr.ecr.ap-south-1.amazonaws.com/chartr-ondc-delhi-buses-buyer:staging
          imagePullPolicy: Always
          args: ["celery-worker", "--loglevel=info"]
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "500Mi"
              cpu: "250m"
