k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: NodePort
  selector:
    app: api-service
  ports:
    - port: 8000
      targetPort: 8000
